Fixed alignment of search and sort box in one horizontal line (#7)

--- a/src/components/sortingDropdown/sortingDropdown.module.css
+++ b/src/components/sortingDropdown/sortingDropdown.module.css
@@ -4,17 +4,17 @@
   padding-left: 30px;
   background-size: 35px;
   background-repeat: no-repeat;
-  margin-bottom: 15px;
   border-radius: 10px;
 }
 
 .sorting {
   display: flex;
   align-items: center;
+  margin-bottom: 5px;
   justify-content: space-between;
 }
 
 .selectField {
-  padding: 5px;
-  border-radius: 10px;
+  padding: 2px;
+  border-radius: 5px;
 }
